crates/ruff_python_parser/tests/snapshots/invalid_syntax@expressions__arguments__missing_expression.py.snap
---
source: crates/ruff_python_parser/tests/fixtures.rs
input_file: crates/ruff_python_parser/resources/invalid/expressions/arguments/missing_expression.py
---
## AST

```
Module(
    ModModule {
        node_index: NodeIndex(None),
        range: 0..38,
        body: [
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 0..10,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 0..10,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 0..4,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 4..10,
                                node_index: NodeIndex(None),
                                args: [
                                    NumberLiteral(
                                        ExprNumberLiteral {
                                            node_index: NodeIndex(None),
                                            range: 8..9,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ],
                                keywords: [],
                                runtime_args: None,
                                runtime_bases: None,
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 11..21,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 11..21,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 11..15,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 15..21,
                                node_index: NodeIndex(None),
                                args: [],
                                keywords: [
                                    Keyword {
                                        range: 16..19,
                                        node_index: NodeIndex(None),
                                        arg: Some(
                                            Identifier {
                                                id: Name("x"),
                                                range: 16..17,
                                                node_index: NodeIndex(None),
                                            },
                                        ),
                                        value: Name(
                                            ExprName {
                                                node_index: NodeIndex(None),
                                                range: 19..19,
                                                id: Name(""),
                                                ctx: Invalid,
                                            },
                                        ),
                                    },
                                ],
                                runtime_args: None,
                                runtime_bases: None,
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 22..32,
                    value: Call(
                        ExprCall {
                            node_index: NodeIndex(None),
                            range: 22..32,
                            func: Name(
                                ExprName {
                                    node_index: NodeIndex(None),
                                    range: 22..26,
                                    id: Name("call"),
                                    ctx: Load,
                                },
                            ),
                            arguments: Arguments {
                                range: 26..32,
                                node_index: NodeIndex(None),
                                args: [
                                    Starred(
                                        ExprStarred {
                                            node_index: NodeIndex(None),
                                            range: 27..28,
                                            value: Name(
                                                ExprName {
                                                    node_index: NodeIndex(None),
                                                    range: 28..28,
                                                    id: Name(""),
                                                    ctx: Invalid,
                                                },
                                            ),
                                            ctx: Load,
                                        },
                                    ),
                                    Name(
                                        ExprName {
                                            node_index: NodeIndex(None),
                                            range: 30..31,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                ],
                                keywords: [],
                                runtime_args: None,
                                runtime_bases: None,
                            },
                        },
                    ),
                },
            ),
            Expr(
                StmtExpr {
                    node_index: NodeIndex(None),
                    range: 34..37,
                    value: Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 34..37,
                            id: Name("foo"),
                            ctx: Load,
                        },
                    ),
                },
            ),
        ],
        runtime_body: None,
    },
)
```
## Errors

  |
1 | call( = 1)
  |       ^ Syntax Error: invalid syntax
2 | call(x = )
3 | call(*, y)
  |


  |
1 | call( = 1)
2 | call(x = )
  |          ^ Syntax Error: invalid syntax
3 | call(*, y)
  |


  |
1 | call( = 1)
2 | call(x = )
3 | call(*, y)
  |       ^ Syntax Error: invalid syntax
4 |
5 | foo
  |
